feat(vector-store): 集成 LangChain4j PGVector 实现向量存储
- 添加 langchain4j-pgvector 依赖到项目
- 创建 EmbeddingStoreProxy 代理类管理嵌入存储实例
- 实现基于过滤器的向量检索和删除功能
- 将传统的 PostgreSQL 批量插入改为 PGVector 存储方式
- 更新应用配置中的数据库连接字符串
- 移除自定义批处理和重试逻辑，使用 PGVector 内置功能